# RF_operation-Beam_stability

./: .dockerignore  .gitignore  .gitlab-ci.yml  .readthedocs.yaml  DOCKER_GUIDE.md  DOCKER_QUICKSTART.md  Dockerfile  Dockerfile.local  GITHUB_SYNC_GUIDE.md  INSTALLATION_GUIDE.md  INSTALL_DOCKER.md  LICENSE  README.md  RF-operation-stability.py  build_complete_docker.sh  create_config.py  docker-compose.yml  install.bat  install.ps1  package.sh  pyproject.toml  requirements.txt  requirements_streamlit.txt  run.bat  setup_shortcut.sh  start_app.sh  streamlit_app.py  sync_to_github.sh  test_presets.py  test_rf_integration.sh  update_script.py
.streamlit/: config.toml
albums/: __init__.py  mbtrack2_to_pycolleff.py  optimiser.py  plot_func.py  robinson.py  saveload.py  scan.py
cavity_operation/: clbi_calculator.py  feuille-calcul-cavités.sm  rf_calc_app.py  rf_calc_base.py  rf_system_pro.py
docs/: requirements.txt
docs/source/: conf.py  (+1 more)
examples/: SOLEIL_II_instability_map.ipynb  SOLEIL_II_optimize_RoQ_Q0.ipynb  Single_RF_instabilities.ipynb
pages/: 0_🔧_Double_RF_System.py  1_📈_Semi_Analytic.py  1_📊_Parameter_Scans.py  2_🎯_Optimization.py  2_🚀_MBTrack2_Remote.py  3_👥_User_Management.py  3_🔬_Mode_Analysis.py  __init__.py
tests/: test_mode_analysis_sync.py  test_preset_sync.py  test_unified_config.py
utils/: __init__.py  albums_wrapper.py  alves_model.py  bosch_model.py  config_manager.py  config_utils.py  hofmann_model.py  jacob_model.py  pedersen_model.py  presets.py  rf_calculations.py  rf_calibration.py  ui_utils.py  venturini_model.py  visualization.py
